--- a/taskmanager/shop/templates/shop/base.html
+++ b/taskmanager/shop/templates/shop/base.html
@@ -9,8 +9,24 @@
 <body>
 <div id="header">
     <a href="/" class="logo">Магазин</a>
-    <a class="py-2 d-none d-md-inline-block" href="{% url 'create' %}">Оставить отзыв</a>
+    <a class="py-2 d-none d-md-inline-block" href="{% url 'home' %}">Все отзывы</a>
+    <span class="py-2 d-none d-md-inline-block">
+        {% if request.user.is_authenticated %}
+        <a href="{% url 'create' %}">Оставить отзыв</a>
+        {% endif %}
+    </span>
 </div>
+    <div id="subheader">
+        <div class="cart">
+    <span class="navbar-text">
+            {% if request.user.is_authenticated %}
+            Добро пожаловать, {{ user.username }} | <a href="{% url 'logout' %}">Выход</a>
+            {% else %}
+            <a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}">Вход</a>
+            {% endif %}
+    </span>
+        </div>
+    </div>
 <div id="subheader">
     <div class="cart">
         {% with total_items=cart|length %}
