--- a/taskmanager/cart/templates/cart/detail.html
+++ b/taskmanager/cart/templates/cart/detail.html
@@ -55,6 +55,6 @@
   </table>
   <p class="text-right">
     <a href="{% url 'shop:product_list' %}" class="button light">В магазин</a>
-    <a href="{% url 'zakaz' %}" class="button">Оформить заказ</a>
+    <a href="{% url 'cart:zakaz' %}" class="button">Оформить заказ</a>
   </p>
 {% endblock %}
