--- a/taskmanager/main/templates/main/base.html
+++ b/taskmanager/main/templates/main/base.html
@@ -1,13 +1,8 @@
-<!doctype html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css>
-</head>
+{% extends "shop/base.html" %}
+{% load static %}
+
+{% block title %}{% endblock %}
+
 <body>
 <header class="site-header sticky-top py-1">
     <nav class="container d-flex flex-column flex-md-row justify-content-between">
@@ -34,4 +29,3 @@
     {% block content %}{% endblock %}
 </div>
 </body>
-</html>
