--- a/taskmanager/shop/templates/shop/base.html
+++ b/taskmanager/shop/templates/shop/base.html
@@ -9,15 +9,10 @@
 <body>
 <div id="header">
     <a href="/" class="logo">Магазин</a>
-    <a class="py-2 d-none d-md-inline-block" href="{% url 'home' %}">Все отзывы</a>
-    <span class="py-2 d-none d-md-inline-block">
-        {% if request.user.is_authenticated %}
-        <a href="{% url 'create' %}">Оставить отзыв</a>
-        {% endif %}
-    </span>
-</div>
-    <div id="subheader">
-        <div class="cart">
+    <a class="logo" href="{% url 'home' %}">Все отзывы</a>
+    <a class="logo" {% if request.user.is_authenticated %} href="{% url 'create' %}">Оставить отзыв</a>
+    {% endif %}
+    <a class="logo" href="{% url 'about' %}">Контакты</a>
     <span class="navbar-text">
             {% if request.user.is_authenticated %}
             Добро пожаловать, {{ user.username }} | <a href="{% url 'logout' %}">Выход</a>
@@ -25,8 +20,6 @@
             <a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}">Вход</a>
             {% endif %}
     </span>
-        </div>
-    </div>
 <div id="subheader">
     <div class="cart">
         {% with total_items=cart|length %}
@@ -40,7 +33,7 @@
         {% endif %}
         {% endwith %}
     </div>
-    <div id="content">
+    <div id="product-detail">
         {% block content %}{% endblock %}
     </div>
 </body>
