--- a/taskmanager/shop/templates/shop/product/detail.html
+++ b/taskmanager/shop/templates/shop/product/detail.html
@@ -4,7 +4,7 @@
 {{ product.name }}
 {% endblock %}
 {% block content %}
-<div class="product-detail">
+<span class="product-detail">
     <img src="{% if product.image %}{{ product.image.url }}{% else %}
     {% static 'img/no_image.png' %}{% endif %}"width="150"  height="">
     <h1>{{ product.name }}</h1>
@@ -18,5 +18,5 @@
         <input type="submit" value="В корзину">
     </form>
     {{ product.description|linebreaks }}
-</div>
+</span>
 {% endblock %}
